[gd_scene load_steps=3 format=3 uid="uid://bl4r85rv0x8l4"]

[ext_resource type="Script" path="res://scenes/scripts/CardTemplateLogic.gd" id="1_2hlmr"]
[ext_resource type="Texture2D" uid="uid://yqjfetnc3800" path="res://resources/CardTemplate/Cards_color3/Civilian_card_version3/Civilian_card_version3.png" id="2_f2x5u"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_2hlmr")

[node name="CardSprite" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 526.0
offset_top = 92.0
offset_right = 721.0
offset_bottom = 376.0
scale = Vector2(2.23333, 2.23333)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_f2x5u")

[node name="CardName" type="TextEdit" parent="."]
offset_left = 594.0
offset_top = 493.0
offset_right = 898.0
offset_bottom = 533.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Name"

[node name="AbilityName" type="TextEdit" parent="."]
offset_left = 594.0
offset_top = 550.0
offset_right = 898.0
offset_bottom = 589.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Ability Name"

[node name="AbilityDescription" type="TextEdit" parent="."]
offset_left = 594.0
offset_top = 597.0
offset_right = 898.0
offset_bottom = 677.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Ability Description"

[node name="CardDamage" type="TextEdit" parent="."]
offset_left = 659.0
offset_top = 123.0
offset_right = 714.0
offset_bottom = 158.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "DMG"

[node name="CardHP" type="TextEdit" parent="."]
offset_left = 778.0
offset_top = 123.0
offset_right = 833.0
offset_bottom = 158.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "HP"

[node name="CardType" type="TextEdit" parent="."]
offset_left = 714.0
offset_top = 685.0
offset_right = 778.0
offset_bottom = 720.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "TP"

[node name="CardImage" type="TextureRect" parent="."]
offset_left = 548.0
offset_top = 123.0
offset_right = 942.0
offset_bottom = 453.0
size_flags_horizontal = 4
size_flags_vertical = 4
